--- a/dieukienfor.html
+++ b/dieukienfor.html
@@ -7,7 +7,21 @@
     <title>Document</title>
   </head>
   <body>
-   
-   
+    <script>
+      const y = [1, 2, "bgd"];
+      const a = new Array(100);
+
+      y[3] = "abcd"; / thêm vào vị trí 3
+      y[y.length] = 123;/ thêm vào vị trí cuối.
+      
+      for (let i = 0; i < y.length; i++) {
+        console.log("phần tử thứ",i, y[i]);
+        
+      }
+      let new length = y.push("thêm ở đầU", 12, 13);
+      let new length = y.unshift("thêm ở cuối", 12, 13);
+      y.splice(2 (xoá từ vị trí 2), 3 (3 phần từ từ 2 trở đi) )
+      y.sort
+    </script>
   </body>
 </html>
