--- a/nguyento.html
+++ b/nguyento.html
@@ -8,21 +8,23 @@
   </head>
   <body>
     <script>
-        let SNT = +prompt("Nhập một giá trị SNT:")
-        if (SNT < 2) {
-           document.write(SNT + " k là số nguyên tố")
-        } if (SNT == 2) {
-           document.write(SNT + " là số nguyên tố")
-        } else {
-            for (i = 2; i < (SNT - 1); i++) {
-              if (SNT % i == 0) {
-                document.write(SNT + " k là số nguyên tố ")
-                break;
-              } else {
-                document.write(SNT + " là số nguyên tố")
-              }
-            }
+      let n = +prompt("Nhap so nguyen to can check: ");
+      let laSNT = true;
+      if (n < 2) {
+        laSNT = false;
+      } else {
+        for (let i = 2; i < n - 1; i++) {
+          if (n % i == 0) {
+            laSNT = false;
+            break;
+          }
         }
+      }
+      if (laSNT) {
+        alert(`Số ${n} là số nguyên tố`);
+      } else {
+        alert(`Số ${n} không là số nguyên tố`);
+      }
     </script>
   </body>
 </html>
